@startuml tablero-simple.puml

title "Sistema del Tablero - Estructura Principal"

skinparam {
  Padding 5
  ClassFontSize 14
  ArrowFontSize 10
}

hide empty members
hide circle

class Tablero {
  -mapaHexagonos: Map<Coordenadas, Hexagono>
  -mapaVertices: Map<Coordenadas, Vertice>
  -listaCarreteras: ArrayList<Carretera>
  __
  +colocarConstruccionInicial()
  +colocarEn()
  +construirCarretera()
  +producirRecurso()
  +obtenerJugadoresAdyacentes()
  +obtenerCaminoMasLargo()
}

class Vertice {
  -hexagonosAdyacentes: List<Hexagono>
  -construccion: Construccion
  -verticesAdyacentes: ArrayList<Vertice>
  __
  +construir()
  +construirInicial()
  +producirRecursos()
  +tieneConstruccion()
  +esAdyacente()
  +construirCarretera()
}

class Coordenadas {
  -x: int
  -y: int
  __
  +obtenerCoordenadaX()
  +obtenerCoordenadaY()
  +equals()
  +hashCode()
}

abstract class Hexagono {
  #produccion: Produccion
  #tieneLadron: boolean
  __
  +generarRecurso()
  +esDesierto()
  +puedeGenerarRecursos()
  +compararProduccion()
}

abstract class Construccion {
  #puntosVictoria: int
  #jugador: Jugador
  __
  +obtenerPuntosDeVictoria()
  +obtenerRecursosNecesarios()
  +validarConstruccion()
}

class Carretera {
  -vertice1: Vertice
  -vertice2: Vertice
  __
  +conseguirVertices()
  +conecta()
  +obtenerRecursosNecesarios()
}

Tablero *--> "19" Hexagono : contiene
Tablero *--> "54" Vertice : contiene
Tablero *--> "*" Carretera : contiene

Tablero --> Coordenadas : usa como clave
Vertice o--> "1..3" Hexagono : adyacente a
Vertice o--> "0..1" Construccion : tiene
Vertice --> "*" Vertice : conectado a

Carretera --> "2" Vertice : conecta

@enduml